// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List View Actions should render Cancel Action 1`] = `
<DocumentFragment>
  <div
    style="position: absolute; top: 0px; left: 0px;"
  />
  <div
    class="popup-overlay popup popup-overlay-overlay"
    style="position: fixed; top: 0px; bottom: 0px; left: 0px; right: 0px; background: rgba(0, 0, 0, 0.5); display: flex; z-index: 999;"
  >
    <div
      class="popup-content popup popup-overlay-content"
      style="position: relative; background: rgb(255, 255, 255); width: 50%; margin: auto; border: 1px solid rgb(187, 187, 187); padding: 5px;"
    >
      <p>
        Are you sure, you want to mark appointment as Cancelled?
      </p>
      <button>
        Yes
      </button>
      <button>
        No
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`List View Actions should render Checkin Action 1`] = `
<DocumentFragment>
  <div
    style="position: absolute; top: 0px; left: 0px;"
  />
  <div
    class="popup-overlay checkinPopup popup-overlay-overlay"
    style="position: fixed; top: 0px; bottom: 0px; left: 0px; right: 0px; background: rgba(0, 0, 0, 0.5); display: flex; z-index: 999;"
  >
    <div
      class="popup-content checkinPopup popup-overlay-content"
      style="position: relative; background: rgb(255, 255, 255); width: 50%; margin: auto; border: 1px solid rgb(187, 187, 187); padding: 5px;"
    >
      <p>
        Are you sure, you want to mark appointment as CheckedIn?
      </p>
      <p>
        <b>
          Check in time:
        </b>
        <sup>
          *
        </sup>
        <input
          type="time"
          value="21:27"
        />
      </p>
      <p>
        <button>
          Yes
        </button>
        <button>
          No
        </button>
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`List View Actions should render Complete Action 1`] = `
<DocumentFragment>
  <div
    style="position: absolute; top: 0px; left: 0px;"
  />
  <div
    class="popup-overlay popup popup-overlay-overlay"
    style="position: fixed; top: 0px; bottom: 0px; left: 0px; right: 0px; background: rgba(0, 0, 0, 0.5); display: flex; z-index: 999;"
  >
    <div
      class="popup-content popup popup-overlay-content"
      style="position: relative; background: rgb(255, 255, 255); width: 50%; margin: auto; border: 1px solid rgb(187, 187, 187); padding: 5px;"
    >
      <p>
        Are you sure, you want to mark appointment as Completed?
      </p>
      <button>
        Yes
      </button>
      <button>
        No
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`List View Actions should render Missed Action 1`] = `
<DocumentFragment>
  <div
    style="position: absolute; top: 0px; left: 0px;"
  />
  <div
    class="popup-overlay popup popup-overlay-overlay"
    style="position: fixed; top: 0px; bottom: 0px; left: 0px; right: 0px; background: rgba(0, 0, 0, 0.5); display: flex; z-index: 999;"
  >
    <div
      class="popup-content popup popup-overlay-content"
      style="position: relative; background: rgb(255, 255, 255); width: 50%; margin: auto; border: 1px solid rgb(187, 187, 187); padding: 5px;"
    >
      <p>
        Are you sure, you want to mark appointment as Missed?
      </p>
      <button>
        Yes
      </button>
      <button>
        No
      </button>
    </div>
  </div>
</DocumentFragment>
`;
